src/smlParser.py
# Generated from sml.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class smlParser ( Parser ):

    grammarFileName = "sml.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "'uint32_t'", "'uint16_t'", 
                     "'='", "'['", "']'", "'for'", "':'", "'if'", "'('", 
                     "')'", "'else'", "'-'", "'~'", "'*'", "'/'", "'%'", 
                     "'+'", "'<<'", "'>>'", "'@>'", "'&'", "'^'", "'|'", 
                     "'?'", "'!'", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'!='", "'&&'", "'||'", "'input1'", "'input2'", "'output'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "InputA", "InputB", "Output", "BoolConstant", 
                      "Ident", "IntegerConstant", "WS", "LineComment" ]

    RULE_commandSeq = 0
    RULE_command = 1
    RULE_block = 2
    RULE_blockComm = 3
    RULE_declaration = 4
    RULE_varType = 5
    RULE_assignment = 6
    RULE_arrDecl = 7
    RULE_intRef = 8
    RULE_arrExpr = 9
    RULE_intIdRef = 10
    RULE_forLoop = 11
    RULE_rangeList = 12
    RULE_ifElse = 13
    RULE_expr = 14
    RULE_arithExpr = 15
    RULE_conditionalExpr = 16
    RULE_boolExpr = 17
    RULE_inputExpr = 18
    RULE_output = 19

    ruleNames =  [ "commandSeq", "command", "block", "blockComm", "declaration", 
                   "varType", "assignment", "arrDecl", "intRef", "arrExpr", 
                   "intIdRef", "forLoop", "rangeList", "ifElse", "expr", 
                   "arithExpr", "conditionalExpr", "boolExpr", "inputExpr", 
                   "output" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    InputA=37
    InputB=38
    Output=39
    BoolConstant=40
    Ident=41
    IntegerConstant=42
    WS=43
    LineComment=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CommandSeqContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(smlParser.CommandContext)
            else:
                return self.getTypedRuleContext(smlParser.CommandContext,i)


        def getRuleIndex(self):
            return smlParser.RULE_commandSeq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommandSeq" ):
                listener.enterCommandSeq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommandSeq" ):
                listener.exitCommandSeq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommandSeq" ):
                return visitor.visitCommandSeq(self)
            else:
                return visitor.visitChildren(self)




    def commandSeq(self):

        localctx = smlParser.CommandSeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_commandSeq)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << smlParser.T__0) | (1 << smlParser.T__2) | (1 << smlParser.T__3) | (1 << smlParser.T__4) | (1 << smlParser.T__8) | (1 << smlParser.T__10) | (1 << smlParser.Output) | (1 << smlParser.Ident))) != 0):
                self.state = 40
                self.command()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(smlParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(smlParser.AssignmentContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(smlParser.ForLoopContext,0)


        def block(self):
            return self.getTypedRuleContext(smlParser.BlockContext,0)


        def output(self):
            return self.getTypedRuleContext(smlParser.OutputContext,0)


        def ifElse(self):
            return self.getTypedRuleContext(smlParser.IfElseContext,0)


        def getRuleIndex(self):
            return smlParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = smlParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [smlParser.T__2, smlParser.T__3, smlParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.declaration()
                pass
            elif token in [smlParser.Ident]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.assignment()
                pass
            elif token in [smlParser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.forLoop()
                pass
            elif token in [smlParser.T__0]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.block()
                pass
            elif token in [smlParser.Output]:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.output()
                pass
            elif token in [smlParser.T__10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.ifElse()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockComm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(smlParser.BlockCommContext)
            else:
                return self.getTypedRuleContext(smlParser.BlockCommContext,i)


        def getRuleIndex(self):
            return smlParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = smlParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(smlParser.T__0)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << smlParser.T__0) | (1 << smlParser.T__8) | (1 << smlParser.T__10) | (1 << smlParser.Ident))) != 0):
                self.state = 55
                self.blockComm()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(smlParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockCommContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(smlParser.AssignmentContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(smlParser.ForLoopContext,0)


        def block(self):
            return self.getTypedRuleContext(smlParser.BlockContext,0)


        def ifElse(self):
            return self.getTypedRuleContext(smlParser.IfElseContext,0)


        def getRuleIndex(self):
            return smlParser.RULE_blockComm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockComm" ):
                listener.enterBlockComm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockComm" ):
                listener.exitBlockComm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockComm" ):
                return visitor.visitBlockComm(self)
            else:
                return visitor.visitChildren(self)




    def blockComm(self):

        localctx = smlParser.BlockCommContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_blockComm)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [smlParser.Ident]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.assignment()
                pass
            elif token in [smlParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.forLoop()
                pass
            elif token in [smlParser.T__0]:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.block()
                pass
            elif token in [smlParser.T__10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.ifElse()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(smlParser.VarTypeContext,0)


        def arrDecl(self):
            return self.getTypedRuleContext(smlParser.ArrDeclContext,0)


        def Ident(self):
            return self.getToken(smlParser.Ident, 0)

        def getRuleIndex(self):
            return smlParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = smlParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.varType()
                self.state = 70
                self.arrDecl()
                self.state = 71
                self.match(smlParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==smlParser.T__3 or _la==smlParser.T__4:
                    self.state = 73
                    self.varType()
                    self.state = 74
                    self.match(smlParser.Ident)


                self.state = 78
                self.match(smlParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return smlParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = smlParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not(_la==smlParser.T__3 or _la==smlParser.T__4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrExpr(self):
            return self.getTypedRuleContext(smlParser.ArrExprContext,0)


        def expr(self):
            return self.getTypedRuleContext(smlParser.ExprContext,0)


        def Ident(self):
            return self.getToken(smlParser.Ident, 0)

        def inputExpr(self):
            return self.getTypedRuleContext(smlParser.InputExprContext,0)


        def getRuleIndex(self):
            return smlParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = smlParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.arrExpr()
                self.state = 84
                self.match(smlParser.T__5)
                self.state = 85
                self.expr()
                self.state = 86
                self.match(smlParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(smlParser.Ident)
                self.state = 89
                self.match(smlParser.T__5)
                self.state = 90
                self.expr()
                self.state = 91
                self.match(smlParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.arrExpr()
                self.state = 94
                self.match(smlParser.T__5)
                self.state = 95
                self.inputExpr()
                self.state = 96
                self.match(smlParser.T__2)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.match(smlParser.Ident)
                self.state = 99
                self.match(smlParser.T__5)
                self.state = 100
                self.inputExpr()
                self.state = 101
                self.match(smlParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(smlParser.Ident, 0)

        def intRef(self):
            return self.getTypedRuleContext(smlParser.IntRefContext,0)


        def getRuleIndex(self):
            return smlParser.RULE_arrDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrDecl" ):
                listener.enterArrDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrDecl" ):
                listener.exitArrDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrDecl" ):
                return visitor.visitArrDecl(self)
            else:
                return visitor.visitChildren(self)




    def arrDecl(self):

        localctx = smlParser.ArrDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(smlParser.Ident)
            self.state = 106
            self.intRef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntRefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IntegerConstant(self, i:int=None):
            if i is None:
                return self.getTokens(smlParser.IntegerConstant)
            else:
                return self.getToken(smlParser.IntegerConstant, i)

        def getRuleIndex(self):
            return smlParser.RULE_intRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntRef" ):
                listener.enterIntRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntRef" ):
                listener.exitIntRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntRef" ):
                return visitor.visitIntRef(self)
            else:
                return visitor.visitChildren(self)




    def intRef(self):

        localctx = smlParser.IntRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_intRef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 108
                self.match(smlParser.T__6)
                self.state = 109
                self.match(smlParser.IntegerConstant)
                self.state = 110
                self.match(smlParser.T__7)
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==smlParser.T__6):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(smlParser.Ident, 0)

        def intIdRef(self):
            return self.getTypedRuleContext(smlParser.IntIdRefContext,0)


        def getRuleIndex(self):
            return smlParser.RULE_arrExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrExpr" ):
                listener.enterArrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrExpr" ):
                listener.exitArrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrExpr" ):
                return visitor.visitArrExpr(self)
            else:
                return visitor.visitChildren(self)




    def arrExpr(self):

        localctx = smlParser.ArrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(smlParser.Ident)
            self.state = 116
            self.intIdRef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntIdRefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(smlParser.ArithExprContext)
            else:
                return self.getTypedRuleContext(smlParser.ArithExprContext,i)


        def getRuleIndex(self):
            return smlParser.RULE_intIdRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntIdRef" ):
                listener.enterIntIdRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntIdRef" ):
                listener.exitIntIdRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntIdRef" ):
                return visitor.visitIntIdRef(self)
            else:
                return visitor.visitChildren(self)




    def intIdRef(self):

        localctx = smlParser.IntIdRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_intIdRef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 118
                    self.match(smlParser.T__6)
                    self.state = 119
                    self.arithExpr(0)
                    self.state = 120
                    self.match(smlParser.T__7)

                else:
                    raise NoViableAltException(self)
                self.state = 124 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForLoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(smlParser.Ident, 0)

        def rangeList(self):
            return self.getTypedRuleContext(smlParser.RangeListContext,0)


        def block(self):
            return self.getTypedRuleContext(smlParser.BlockContext,0)


        def getRuleIndex(self):
            return smlParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoop" ):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = smlParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(smlParser.T__8)
            self.state = 127
            self.match(smlParser.T__3)
            self.state = 128
            self.match(smlParser.Ident)
            self.state = 129
            self.match(smlParser.T__5)
            self.state = 130
            self.rangeList()
            self.state = 131
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RangeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IntegerConstant(self, i:int=None):
            if i is None:
                return self.getTokens(smlParser.IntegerConstant)
            else:
                return self.getToken(smlParser.IntegerConstant, i)

        def getRuleIndex(self):
            return smlParser.RULE_rangeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRangeList" ):
                listener.enterRangeList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRangeList" ):
                listener.exitRangeList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRangeList" ):
                return visitor.visitRangeList(self)
            else:
                return visitor.visitChildren(self)




    def rangeList(self):

        localctx = smlParser.RangeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_rangeList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(smlParser.T__6)
            self.state = 134
            self.match(smlParser.IntegerConstant)
            self.state = 135
            self.match(smlParser.T__9)
            self.state = 136
            self.match(smlParser.IntegerConstant)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==smlParser.T__9:
                self.state = 137
                self.match(smlParser.T__9)
                self.state = 138
                self.match(smlParser.IntegerConstant)


            self.state = 141
            self.match(smlParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfElseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolExpr(self):
            return self.getTypedRuleContext(smlParser.BoolExprContext,0)


        def blockComm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(smlParser.BlockCommContext)
            else:
                return self.getTypedRuleContext(smlParser.BlockCommContext,i)


        def getRuleIndex(self):
            return smlParser.RULE_ifElse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElse" ):
                listener.enterIfElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElse" ):
                listener.exitIfElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElse" ):
                return visitor.visitIfElse(self)
            else:
                return visitor.visitChildren(self)




    def ifElse(self):

        localctx = smlParser.IfElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifElse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(smlParser.T__10)
            self.state = 144
            self.match(smlParser.T__11)
            self.state = 145
            self.boolExpr(0)
            self.state = 146
            self.match(smlParser.T__12)
            self.state = 147
            self.blockComm()
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 148
                self.match(smlParser.T__13)
                self.state = 149
                self.blockComm()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithExpr(self):
            return self.getTypedRuleContext(smlParser.ArithExprContext,0)


        def conditionalExpr(self):
            return self.getTypedRuleContext(smlParser.ConditionalExprContext,0)


        def getRuleIndex(self):
            return smlParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = smlParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expr)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.arithExpr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.conditionalExpr()
                pass

